Added UI test, updated API tests Added crossbrowser settings